qualche bug-fix.. ora potrei abbozzare una funzione di fitness cosi il genetico comincia ad avere senso..